fix css styling on startpage so that header is not covering the content

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,130 @@
   padding: 0;
 }
 
+body {
+  margin: 0;
+}
+.header {
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+}
+.header nav {
+  position: relative;
+  margin-top: -20px;
+}
+.header > .logo > img {
+  width: 200px;
+}
+.header ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  margin-top: -130px;
+}
+.header li a {
+  position: relative;
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+}
+.header li a:hover,
+.header .menu-btn:hover {
+  background-color: #f4f4f4;
+}
+
+.header > nav > .logo > img {
+  display: block;
+  width: 400px;
+}
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .nav-icon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background 0.2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .nav-icon:before,
+.header .menu-icon .nav-icon:after {
+  background: #333;
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .nav-icon:before {
+  top: 5px;
+}
+
+.header .menu-icon .nav-icon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon:before {
+  transform: rotate(-45deg);
+  top: 0;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon:after {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+/* 48em = 768px @ 16pt font */
+
+@media (min-width: 1040px) {
+  .header li {
+    float: left;
+  }
+  .header li a {
+    padding: 20px 30px;
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+}
 header {
   background-color: var(--primary-color);
 }
@@ -79,13 +203,14 @@ li a {
   padding: 8% 5%;
   width: 100%;
   height: 200vh;
-  background: linear-gradient(var(--primary-color) 45%, var(--white) 0%);
+  background: linear-gradient(var(--primary-color) 55%, var(--white) 0%);
 }
 
 #introContainer {
   color: var(--text-color);
   width: 100%;
   margin-bottom: 7rem;
+  margin-top: 7rem;
 
   h1 {
     font-size: 5rem;
@@ -237,6 +362,7 @@ li a {
   text-align: center;
   padding: 50px 20px;
   background-color: #f8f8f8;
+  margin-top: 8rem;
 }
 
 #our-services h2 {
